--- a/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
+++ b/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
@@ -260,30 +260,30 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\classfactoryhelpers.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fbuffer.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fcleanup.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fcommandline.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fdebug.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fdynlib.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fobject.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fstdmethods.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fstreamer.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\fstring.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\hexbinary.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\timer.h" />
-    <ClInclude Include="..\..\vst3sdk\base\source\updatehandler.h" />
-    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\conststringtable.h" />
-    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\funknown.h" />
-    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\ustring.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\common\memorystream.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\common\pluginview.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstaudioeffect.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstbus.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponent.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponentbase.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstparameters.h" />
-    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstsinglecomponenteffect.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\classfactoryhelpers.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcleanup.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcommandline.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstdmethods.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\hexbinary.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\IControls.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\ITextEntryControl.h" />
@@ -310,6 +310,7 @@
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_include_in_plug_hdr.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_include_in_plug_src.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_select.h" />
+    <ClInclude Include="..\..\iPlug2\IGraphics\ISender.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsLinux.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsMac.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsMac_view.h" />
@@ -324,6 +325,7 @@
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugParameter.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugPaths.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugPlatform.h" />
+    <ClInclude Include="..\..\iPlug2\IPlug\IPlugPluginBase.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugProcessor.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugStructs.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugTimer.h" />
@@ -340,33 +342,33 @@
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\vst3sdk\base\source\baseiids.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fbuffer.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fdebug.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fdynlib.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fobject.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fstreamer.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\fstring.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\timer.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\source\updatehandler.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\thread\source\fcondition.cpp" />
-    <ClCompile Include="..\..\vst3sdk\base\thread\source\flock.cpp" />
-    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\conststringtable.cpp" />
-    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\coreiids.cpp" />
-    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\funknown.cpp" />
-    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\ustring.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\memorystream.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\pluginview.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\commoniids.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\main\dllmain.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\main\pluginfactory.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstaudioeffect.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstbus.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponent.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponentbase.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstinitiids.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstparameters.cpp" />
-    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstsinglecomponenteffect.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\baseiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\fcondition.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\flock.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\coreiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\commoniids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\dllmain.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\pluginfactory.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstinitiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\IControls.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\ITextEntryControl.cpp" />
