--- a/MyNewPlugin/resources/main.rc
+++ b/MyNewPlugin/resources/main.rc
@@ -207,8 +207,8 @@ BEGIN
             VALUE "FileDescription", "MyNewPlugin"
             VALUE "InternalName", "MyNewPlugin"
             VALUE "ProductName", "MyNewPlugin"
-            VALUE "CompanyName", "MyManufacturerName"
-            VALUE "LegalCopyright", "Copyright 2019 Acme Inc"
+            VALUE "CompanyName", "AcmeInc"
+            VALUE "LegalCopyright", "Copyright 2020 Acme Inc"
             VALUE "LegalTrademarks", "VST is a trademark of Steinberg Media Technologies GmbH, Audio Unit is a trademark of Apple, Inc."
         END
     END
