--- a/MyNewPlugin/projects/MyNewPlugin-app.vcxproj
+++ b/MyNewPlugin/projects/MyNewPlugin-app.vcxproj
@@ -300,6 +300,7 @@
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_include_in_plug_hdr.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_include_in_plug_src.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\IGraphics_select.h" />
+    <ClInclude Include="..\..\iPlug2\IGraphics\ISender.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsLinux.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsMac.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Platforms\IGraphicsMac_view.h" />
@@ -315,6 +316,7 @@
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugParameter.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugPaths.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugPlatform.h" />
+    <ClInclude Include="..\..\iPlug2\IPlug\IPlugPluginBase.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugProcessor.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugStructs.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugTimer.h" />
