--- a/MyNewPlugin/resources/MyNewPlugin-macOS-AUv3Framework-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-macOS-AUv3Framework-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>AUv3Framework</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.MyManufacturerName.app.MyNewPlugin.AUv3Framework</string>
+	<string>com.AcmeInc.app.MyNewPlugin.AUv3Framework</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
