--- a/MyNewPlugin/resources/MyNewPlugin-macOS-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-macOS-Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>MyNewPlugin</string>
 	<key>CFBundleGetInfoString</key>
-	<string>MyNewPlugin v1.0.0 Copyright 2019 Acme Inc</string>
+	<string>MyNewPlugin v1.0.0 Copyright 2020 Acme Inc</string>
 	<key>CFBundleIconFile</key>
 	<string>MyNewPlugin.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.MyManufacturerName.app.MyNewPlugin</string>
+	<string>com.AcmeInc.app.MyNewPlugin</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
-	<string>EuNw</string>
+	<string>tZU7</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
 	<key>CSResourcesFileMapped</key>
