--- a/MyNewPlugin/resources/MyNewPlugin-macOS-AUv3-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-macOS-AUv3-Info.plist
@@ -40,7 +40,7 @@
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
-					<string>tZU7</string>
+					<string>lQhx</string>
 					<key>tags</key>
 					<array>
 						<string>Synth</string>
