--- a/MyNewPlugin/config/MyNewPlugin-mac.xcconfig
+++ b/MyNewPlugin/config/MyNewPlugin-mac.xcconfig
@@ -5,7 +5,7 @@
 
 IPLUG2_ROOT = ../../iPlug2
 
-#include "../../my-common-mac.xcconfig"
+#include "../../iPlug2/common-mac.xcconfig"
 
 //------------------------------
 // Global build settings
