--- a/MyNewPlugin/projects/MyNewPlugin-iOS.xcodeproj/xcshareddata/xcschemes/iOS-Update plists.xcscheme
+++ b/MyNewPlugin/projects/MyNewPlugin-iOS.xcodeproj/xcshareddata/xcschemes/iOS-Update plists.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1200"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4FC3EFC32086C0A600BD11FA"
-               BuildableName = "MyNewPluginVST3Controller.a"
-               BlueprintName = "VST3C"
-               ReferencedContainer = "container:MyNewPlugin-macOS.xcodeproj">
+               BlueprintIdentifier = "B87FD2032351C90C00CF7307"
+               BuildableName = "Update plists"
+               BlueprintName = "Update plists"
+               ReferencedContainer = "container:MyNewPlugin-iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,8 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4FC3EFC32086C0A600BD11FA"
-            BuildableName = "MyNewPluginVST3Controller.a"
-            BlueprintName = "VST3C"
-            ReferencedContainer = "container:MyNewPlugin-macOS.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -63,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4FC3EFC32086C0A600BD11FA"
-            BuildableName = "MyNewPluginVST3Controller.a"
-            BlueprintName = "VST3C"
-            ReferencedContainer = "container:MyNewPlugin-macOS.xcodeproj">
+            BlueprintIdentifier = "B87FD2032351C90C00CF7307"
+            BuildableName = "Update plists"
+            BlueprintName = "Update plists"
+            ReferencedContainer = "container:MyNewPlugin-iOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
