--- a/MyNewPlugin/resources/MyNewPlugin-AU-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-AU-Info.plist
@@ -16,7 +16,7 @@
 			<key>sandboxSafe</key>
 			<true/>
 			<key>subtype</key>
-			<string>tZU7</string>
+			<string>lQhx</string>
 			<key>type</key>
 			<string>aumu</string>
 			<key>version</key>
@@ -42,7 +42,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
-	<string>tZU7</string>
+	<string>lQhx</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
 	<key>CSResourcesFileMapped</key>
