--- a/MyNewPlugin/resources/MyNewPlugin-VST3-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-VST3-Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
-	<string>tZU7</string>
+	<string>lQhx</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
 	<key>CSResourcesFileMapped</key>
