--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
       with:
+        path: /
         submodules: true
 
     - name: Get VST3 SDK
