try windows build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
         # os: [macos-latest, windows-latest]
+        os: [windows-latest]
         include:
-          - os: macos-latest
-            build_dir: build-mac
-            artifact_ext: mac
-          # - os: windows-latest
-          #   build_dir: build-win
-          #   artifact_ext: win
+          # - os: macos-latest
+          #   build_dir: build-mac
+          #   artifact_ext: mac
+          - os: windows-latest
+            build_dir: build-win
+            artifact_ext: win
 
     steps:
     # - name: Checkout iPlug2
