--- a/MyNewPlugin/projects/MyNewPlugin-vst2.vcxproj
+++ b/MyNewPlugin/projects/MyNewPlugin-vst2.vcxproj
@@ -300,7 +300,9 @@
     <ClInclude Include="..\..\iPlug2\IPlug\IPlug_include_in_plug_hdr.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\IPlug_include_in_plug_src.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\VST2\IPlugVST2.h" />
+    <ClInclude Include="..\MidiSynth.h" />
     <ClInclude Include="..\MyNewPlugin.h" />
+    <ClInclude Include="..\MySynthVoice.h" />
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -374,6 +376,7 @@
     <ClCompile Include="..\..\iPlug2\IPlug\IPlugProcessor.cpp" />
     <ClCompile Include="..\..\iPlug2\IPlug\IPlugTimer.cpp" />
     <ClCompile Include="..\..\iPlug2\IPlug\VST2\IPlugVST2.cpp" />
+    <ClCompile Include="..\MidiSynth.cpp" />
     <ClCompile Include="..\MyNewPlugin.cpp" />
   </ItemGroup>
   <ItemGroup>
