--- a/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
+++ b/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
@@ -338,7 +338,9 @@
     <ClInclude Include="..\..\iPlug2\IPlug\VST3\IPlugVST3_Parameter.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\VST3\IPlugVST3_ProcessorBase.h" />
     <ClInclude Include="..\..\iPlug2\IPlug\VST3\IPlugVST3_View.h" />
+    <ClInclude Include="..\MidiSynth.h" />
     <ClInclude Include="..\MyNewPlugin.h" />
+    <ClInclude Include="..\MySynthVoice.h" />
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -424,6 +426,7 @@
     <ClCompile Include="..\..\iPlug2\IPlug\IPlugTimer.cpp" />
     <ClCompile Include="..\..\iPlug2\IPlug\VST3\IPlugVST3.cpp" />
     <ClCompile Include="..\..\iPlug2\IPlug\VST3\IPlugVST3_ProcessorBase.cpp" />
+    <ClCompile Include="..\MidiSynth.cpp" />
     <ClCompile Include="..\MyNewPlugin.cpp" />
   </ItemGroup>
   <ItemGroup>
