--- a/MyNewPlugin/projects/MyNewPlugin-vst2.vcxproj.filters
+++ b/MyNewPlugin/projects/MyNewPlugin-vst2.vcxproj.filters
@@ -65,6 +65,7 @@
     <ClCompile Include="..\..\iPlug2\IGraphics\Drawing\IGraphicsSkia.cpp">
       <Filter>IGraphics\Drawing</Filter>
     </ClCompile>
+    <ClCompile Include="..\MidiSynth.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
@@ -228,6 +229,8 @@
     <ClInclude Include="..\..\iPlug2\IGraphics\ISender.h">
       <Filter>IGraphics</Filter>
     </ClInclude>
+    <ClInclude Include="..\MySynthVoice.h" />
+    <ClInclude Include="..\MidiSynth.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="IPlug">
