--- a/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj.filters
+++ b/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj.filters
@@ -35,82 +35,82 @@
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.cpp">
       <Filter>IGraphics\Controls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstaudioeffect.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstbus.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponent.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponentbase.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstinitiids.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstinitiids.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstparameters.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\vst\vstsinglecomponenteffect.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\pluginview.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\common</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\memorystream.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\common</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\dllmain.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\main\dllmain.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\main</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\baseiids.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\baseiids.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fbuffer.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fdebug.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fdynlib.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fobject.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fstreamer.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\fstring.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\timer.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\source\updatehandler.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\flock.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\thread\source\flock.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\thread</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\fcondition.cpp">
+    <ClCompile Include="..\..\vst3sdk\base\thread\source\fcondition.cpp">
       <Filter>IPlug\VST3\VST3_SDK\base\thread</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.cpp">
+    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\conststringtable.cpp">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\coreiids.cpp">
+    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\coreiids.cpp">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.cpp">
+    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\funknown.cpp">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.cpp">
+    <ClCompile Include="..\..\vst3sdk\pluginterfaces\base\ustring.cpp">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\pluginfactory.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\main\pluginfactory.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\main</Filter>
     </ClCompile>
     <ClCompile Include="..\..\iPlug2\IPlug\IPlugPaths.cpp">
@@ -122,7 +122,7 @@
     <ClCompile Include="..\..\iPlug2\IPlug\VST3\IPlugVST3_ProcessorBase.cpp">
       <Filter>IPlug\VST3</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\commoniids.cpp">
+    <ClCompile Include="..\..\vst3sdk\public.sdk\source\common\commoniids.cpp">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\iPlug2\IGraphics\Drawing\IGraphicsAGG.cpp">
@@ -280,76 +280,76 @@
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.h">
       <Filter>IGraphics\Controls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstsinglecomponenteffect.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstaudioeffect.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstbus.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponent.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstcomponentbase.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\vst\vstparameters.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\source\vst</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\common\pluginview.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\common</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.h">
+    <ClInclude Include="..\..\vst3sdk\public.sdk\source\common\memorystream.h">
       <Filter>IPlug\VST3\VST3_SDK\public.sdk\common</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\classfactoryhelpers.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\classfactoryhelpers.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fbuffer.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcleanup.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fcleanup.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcommandline.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fcommandline.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fdebug.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fdynlib.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fobject.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstdmethods.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fstdmethods.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fstreamer.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\fstring.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\hexbinary.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\hexbinary.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\timer.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.h">
+    <ClInclude Include="..\..\vst3sdk\base\source\updatehandler.h">
       <Filter>IPlug\VST3\VST3_SDK\base\source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.h">
+    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\ustring.h">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.h">
+    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\conststringtable.h">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.h">
+    <ClInclude Include="..\..\vst3sdk\pluginterfaces\base\funknown.h">
       <Filter>IPlug\VST3\VST3_SDK\plugininterfaces\base</Filter>
     </ClInclude>
     <ClInclude Include="..\..\iPlug2\IPlug\IPlugPaths.h">
