--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,13 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
-    - name: Get VST3 SDK
-      run: |
-        cd iPlug2/Dependencies/IPlug
-        ./download-iplug-libs.sh
-      shell: bash
+    # - name: Get VST3 SDK
+    #   run: |
+    #     cd iPlug2/Dependencies/IPlug
+    #     ./download-iplug-libs.sh
+    #   shell: bash
 
     - name: Get Prebuilt Libs
       run: |
