--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,8 +106,9 @@ jobs:
         run: |
           curl -L "https://github.com/Tracktion/pluginval/releases/download/latest_release/pluginval_macOS.zip" -o pluginval.zip
           unzip pluginval
-          mkdir -p ~/Library/Audio/Plug-Ins/VST3
-          mv ${{env.PROJECT_NAME}}.vst3 ~/Library/Audio/Plug-Ins/VST3
+          # mkdir -p ~/Library/Audio/Plug-Ins/VST3
+          # mv ${{env.PROJECT_NAME}}.vst3 ~/Library/Audio/Plug-Ins/VST3
+          ls -la
           pluginval.app/Contents/MacOS/pluginval --skip-gui-tests --validate-in-process --output-dir "./bin" --validate ${{env.PROJECT_NAME}}.vst3 || exit 1
           mkdir -p ~/Library/Audio/Plug-Ins/Components
           mv ${{env.PROJECT_NAME}}.component ~/Library/Audio/Plug-Ins/Components
