--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    name: Build
+    name: Build-native-plugins
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
