Don't use VST3 submodule

--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - "v*"
-      
+
 env:
   PROJECT_NAME: MyNewPlugin
 
@@ -40,11 +40,11 @@ jobs:
       with:
         submodules: recursive
 
-    # - name: Get VST3 SDK
-    #   run: |
-    #     cd iPlug2/Dependencies/IPlug
-    #     ./download-iplug-libs.sh
-    #   shell: bash
+    - name: Get VST3 SDK
+      run: |
+        cd iPlug2/Dependencies/IPlug
+        ./download-iplug-libs.sh
+      shell: bash
 
     - name: Get Prebuilt Libs
       run: |
