--- a/my-common-mac.xcconfig
+++ b/my-common-mac.xcconfig
@@ -82,7 +82,7 @@ EXTRAS_INC_PATHS = $(EXTRAS_PATH) $(EXTRAS_PATH)/Synth $(EXTRAS_PATH)/Faust $(EX
 
 // Plug-in SDK paths
 VST2_SDK = $(DEPS_PATH)/IPlug/VST2_SDK
-VST3_SDK = $(IPLUG2_ROOT)/../vst3sdk
+VST3_SDK = $(DEPS_PATH)/IPlug/VST3_SDK
 AAX_SDK = $(DEPS_PATH)/IPlug/AAX_SDK
 REAPER_SDK = $(DEPS_PATH)/IPlug/Reaper
 
